--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,13 @@ header span span{
 header p{
   font-size: 25px;
 }
-
-main{
+.space-cards{
   margin: 0 auto;
   padding: 80px 0px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   align-self: center;
   flex-wrap: wrap;
   width: 80%;
@@ -27,10 +26,10 @@ main{
 }
 
 .space-wrapper{
-  width: 40%;
+  width: 45%;
   border-radius: 12px;
   background-color: #fff;
-  margin-bottom: 15px;
+  margin-bottom: 86px;
 }
 
 
@@ -42,7 +41,7 @@ main{
 
 
 .space-info{
-  padding: 2px 16px;
+  padding: 18px 16px;
 }
 
 .space-info p {
@@ -56,13 +55,15 @@ main{
 .icons{
   display: flex;
   flex-direction: row;
-  justify-self: end;
+  justify-content: end;
+  margin-top: 20px;
 }
 
-.heart .share{
+.heart, .share{
   padding: 12px;
   width: 20px;
   height: 20px;
+  border-radius: 5px;
 }
 
 .heart{
@@ -72,6 +73,7 @@ main{
 
 .heart:hover{
   border-color: rgb(187, 10, 10);
+  color: rgb(187, 10, 10);
 }
 
 .share{
@@ -80,4 +82,5 @@ main{
 
 .share:hover{
   border-color: rgb(4, 32, 192);
+  color: rgb(4, 32, 192);
 }
