--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,8 @@ header{
   padding: 20px 10px;
 }
 
-header span span{
-  width: 30%;
-  font-size: 20px;
+header h1{
+  font-size: 30px;
 }
 
 header p{
